# zubbi

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODEOWNERS  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  settings.cfg.example  setup.cfg  setup.py  test-requirements.txt  tox.ini  zubbi-scraper
.github/: baumpfleger.yml
.github/workflows/: test.yaml  tox.yaml
docker/: Dockerfile  docker-compose.yaml  settings.cfg  tenant-config.yaml
k8s/: README.md  elasticsearch.yaml  zubbi-ingress.yaml  zubbi.yaml
tests/: conftest.py  test_doc.py  test_elasticsearch.py  test_model.py  test_utils.py  test_views.py
tests/scraper/: test_events.py  test_integration.py  test_main.py  test_repo_parser.py  test_tenant_parser.py
tests/scraper/connections/: conftest.py  test_gerrit.py  test_git.py  test_github.py  test_init.py
tests/testdata/: app_key_file  test.bar.yaml  test.foo.yaml
tests/testdata/payloads/: github-webhook-installation-created.json  github-webhook-installation-deleted.json  github-webhook-push.json
tests/testdata/readmes/: python-code.rst  reusable.rst  supported-os.rst  yaml-code.rst
tests/testdata/repo_files/roles/bar/: README.rst
tests/testdata/repo_files/roles/foo/: README.rst
tests/testdata/repo_files/roles/foobar/baz/: README.rst
tests/testdata/repo_files/zuul-extra.d/: extra-jobs.yaml
tests/testdata/repo_files/zuul.d/: jobs-parse-error.yaml  jobs.yaml  no-jobs.yaml
tests/testdata/tenant_configs/: tenant-config.yaml
zubbi/: __init__.py  cli.py  config.py  default_settings.py  doc.py  extensions.py  helpers.py  models.py  utils.py  views.py
zubbi/scraper/: __init__.py  exceptions.py  main.py  repo_parser.py  scraper.py  tenant_parser.py
zubbi/scraper/connections/: __init__.py  gerrit.py  git.py  github.py
zubbi/scraper/repos/: __init__.py  gerrit.py  git.py  github.py
zubbi/static/: functions.js  style.css
zubbi/templates/: _css.html  _footer.html  _js.html  _navbar.html  base.html  details.html  error.html  how-to.html  index.html  lmzify.html  macro-searchbox.html  macros.html  search.html  skeleton.html
zubbi/templates/includes/: block-changelog.html  block-description.html  changelog-example.html  code-example.html  job-example.html  role-example.html
